--- a/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
+++ b/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-06-03 14:38:53 $
+# $Revision: 1.5 $  $Date: 2004-06-04 23:27:17 $
 #
 
 
@@ -28,7 +28,7 @@ ToolSelector.SelectionLogMessage                         = Selected:
 SelectionAreaHelper.SecondaryMsg.NoSelectionMade         = No selection to instantiate
 SelectionAreaHelper.SecondaryMsg.NoPublicNullConstructor = No public null constructor
 SelectionAreaHelper.SecondaryMsg.TypeNonPublic           = Type not public
-SelectionAreaHelper.SecondaryMsg.UnknownError            = Unknown Error
+SelectionAreaHelper.SecondaryMsg.Unknown_ERROR_=Unknown Error
 SelectionAreaHelper.SelectType.WebProxy                  = Web Service
 SerializedFileHelper.Button.SelectFile                   = Select...
 ChooseBeanDialog.Group.Properties.Title                  = Properties
