--- a/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.5 $  $Date: 2004-05-11 16:14:07 $
+# $Revision: 1.6 $  $Date: 2004-06-04 23:27:36 $
 #
 
 
@@ -66,11 +66,10 @@ JTabbedPanePreviousObjectAction.Text             = &Previous
 JavaBeanSetTextDialog.Shell.Text                 = Set
 JavaBeanSetTextDialog.LookAndFeel.Label.Text     = &{0}:
 DummyWizardCommand.MessageDialog.FileWillBeSaved = "{0}\'\' will be saved during this action. Proceed?
-ComponentProxyAdapter.Picture_too_large          = Component is too large for a picture. The picture has been clipped.
-ComponentProxyAdapter.Out_of_memory              = Component is too large. Ran out of memory retrieving the picture.
-ComponentProxyAdapter.Image_collection_exception = Exception occurred of type {0}
-ComponentProxyAdapter.Image_collection_failed    = Get of the picture failed: \"{0}"
-
+ComponentProxyAdapter.Picture_too_large_WARN_=Component is too large for a picture. The picture has been clipped.
+ComponentProxyAdapter.Out_of_memory_WARN_=Component is too large. Ran out of memory retrieving the picture.
+ComponentProxyAdapter.Image_collection_exception_EXC_=Exception occurred of type {0}
+ComponentProxyAdapter.Image_collection_failed_ERROR_=Get of the picture failed: "{0}"
 GridLayoutLayoutPage.gridDimensionsTitle         = Grid Dimensions
 GridLayoutLayoutPage.columns                     = Number of columns:
 GridLayoutLayoutPage.rows                        = Number of rows:
