--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-06-03 14:39:30 $
+# $Revision: 1.5 $  $Date: 2004-06-04 23:27:17 $
 #
 
 
@@ -45,7 +45,7 @@ JVE_STATUS_BAR_MSG_SYNC_CANVAS                      = Synchronizing Canvas
 JVE_STATUS_BAR_MSG_SYNC_SOURCE                      = Synchronizing Source
 JVE_STATUS_BAR_MSG_STOP_RT                          = Stop Round Tripping
 JVE_STATUS_BAR_MSG_RESUME_RT                        = Resume Round Tripping
-JVE_STATUS_BAR_MSG_PARSE_ERROR                      = Parsing Error - Click to try reload
+JVE_STATUS_BAR_MSG_PARSE_ERROR_                     = Parsing Error - Click to try reload
 JVE_STATUS_MSG_ERROR                                = Parse Error
 ShowOverviewAction.label                            = Show Overview
 ShowOverviewAction.labelOutline                     = Show Outline
@@ -57,7 +57,7 @@ Action.Delete.tooltip                               = Delete
 RenameJavaBeanObjectActionDelegate.Shell.Text       = Rename
 RenameJavaBeanObjectActionDelegate.FieldNaming.Desc = Java Field will be named: {0}
 RenameJavaBeanObjectActionDelegate.Message          = Enter a new name.
-JavaVisualEditor.notJavaProject                     = "{0}\" is not a Java Project. Please move the file {1} to a Java Project
+JavaVisualEditor.notJavaProject_EXC_                = "{0}\" is not a Java Project. Please move the file {1} to a Java Project
 JavaVisualEditor.ErrorTitle                         = Visual Editor for Java Error
 JavaVisualEditor.ErrorDesc                          = Error trying to set new file into editor.
 JavaVisualEditor.NoEvents                           = No Events
