--- a/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,116 +10,116 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.6 $  $Date: 2004-06-04 23:27:36 $
+# $Revision: 1.7 $  $Date: 2004-06-04 23:57:49 $
 #
 
 
-BorderLayout.North                               = North
-BorderLayout.East                                = East
-BorderLayout.West                                = West
-BorderLayout.Center                              = Center
-BorderLayout.South                               = South
-BorderLayout.BEFORE_LINE_BEGINS                  = Before line begins
-BorderLayout.AFTER_LINE_ENDS                     = After line ends
-Layout.NullLayout                                = null
-Layout.BorderLayout                              = BorderLayout
-Layout.BoxLayoutX_AXIS                           = BoxLayout(X_AXIS)
-Layout.BoxLayoutY_AXIS                           = BoxLayout(Y_AXIS)
-Layout.CardLayout                                = CardLayout
-Layout.FlowLayout                                = FlowLayout
-Layout.GridBagLayout                             = GridBagLayout
-Layout.GridLayout                                = GridLayout
-Decorator.JSplitPane.Left                        = left
-Decorator.JSplitPane.Right                       = right
-Decorator.JSplitPane.Top                         = top
-Decorator.JSplitPane.Bottom                      = bottom
-IconController.Status.SearchingForImages         = Searching for images
-IconController.Status.SearchStopped              = Search Stopped
-IconController.Status.SearchDone                 = Done
-IconController.RootLabel                         = {0} - {1}
-IconController.HiddenImage_ERROR_                = IWAV0119E The previous image-("{0}") hides this image.
-IconDialog.Group.Browse                          = Browse in
-IconDialog.Label.Location                        = Location:
-IconDialog.Label.Files                           = Files:
-IconDialog.Radio.BrowseProject                   = Project
-IconDialog.Radio.BrowseFiles                     = File system
-IconDialog.Text.Filter                           = Filter:
-IconDialog.Checkbox.SearchSubDirs                = Search sub-directories
-IconDialog.Group.AvailableIcons                  = Available images
-IconDialog.Group.SelectedImage                   = Selected image
-IconDialog.Text.FileSelected                     = File:
-IconDialog.Text.PathOfFile                       = Path:
-IconDialog.Msg                                   = Specify a new filter. You can also specify multiple filters separated by commas.
-IconDialog.Shell.Text                            = Select an Image File
-ConstraintComponent.constraint                   = constraint
-SingleImageDisplay.ImageNotLoaded_WARN_          = IWAV0131W Image couldn't be loaded for some reason that couldn't be captured.
-SingleImageDisplay.OutOfMemory_WARN_             = IWAV0132W Ran out of memory. Couldn't display the image.
-TabOrder.label                                   = Tab Order
-ShowTabOrder.label                               = Show Tab Order
-DefaultTabOrder.label                            = Set Default Tab Order
-Container.moved._WARN_                           = IWAV0133W A component of this container was either assigned to more than one container or it has been removed.
-JTable_ShouldnotSet_EXC_                         = IWAV0134E Shouldn't set true while there are explicit table columns.
-IconProxyAdapter.CannotReadFileError_EXC_        = IWAV0141E Cannot read file \"{0}"
-JTabbedPaneChildTreeLabelDecorator.Tab.Title     = {0}-\"{1}"
-JTabbedPaneNextObjectAction.Text                 = &Next
-JTabbedPanePreviousObjectAction.Text             = &Previous
-JavaBeanSetTextDialog.Shell.Text                 = Set
-JavaBeanSetTextDialog.LookAndFeel.Label.Text     = &{0}:
-DummyWizardCommand.MessageDialog.FileWillBeSaved = "{0}\'\' will be saved during this action. Proceed?
-ComponentProxyAdapter.Picture_too_large_WARN_=Component is too large for a picture. The picture has been clipped.
-ComponentProxyAdapter.Out_of_memory_WARN_=Component is too large. Ran out of memory retrieving the picture.
-ComponentProxyAdapter.Image_collection_exception_EXC_=Exception occurred of type {0}
-ComponentProxyAdapter.Image_collection_failed_ERROR_=Get of the picture failed: "{0}"
-GridLayoutLayoutPage.gridDimensionsTitle         = Grid Dimensions
-GridLayoutLayoutPage.columns                     = Number of columns:
-GridLayoutLayoutPage.rows                        = Number of rows:
-GridLayoutLayoutPage.spacingTitle                = Grid Spacing
-GridLayoutLayoutPage.horizontalGap               = Horizontal gap:
-GridLayoutLayoutPage.verticalGap                 = Vertical gap:
+BorderLayout.North                                    = North
+BorderLayout.East                                     = East
+BorderLayout.West                                     = West
+BorderLayout.Center                                   = Center
+BorderLayout.South                                    = South
+BorderLayout.BEFORE_LINE_BEGINS                       = Before line begins
+BorderLayout.AFTER_LINE_ENDS                          = After line ends
+Layout.NullLayout                                     = null
+Layout.BorderLayout                                   = BorderLayout
+Layout.BoxLayoutX_AXIS                                = BoxLayout(X_AXIS)
+Layout.BoxLayoutY_AXIS                                = BoxLayout(Y_AXIS)
+Layout.CardLayout                                     = CardLayout
+Layout.FlowLayout                                     = FlowLayout
+Layout.GridBagLayout                                  = GridBagLayout
+Layout.GridLayout                                     = GridLayout
+Decorator.JSplitPane.Left                             = left
+Decorator.JSplitPane.Right                            = right
+Decorator.JSplitPane.Top                              = top
+Decorator.JSplitPane.Bottom                           = bottom
+IconController.Status.SearchingForImages              = Searching for images
+IconController.Status.SearchStopped                   = Search Stopped
+IconController.Status.SearchDone                      = Done
+IconController.RootLabel                              = {0} - {1}
+IconController.HiddenImage_ERROR_                     = IWAV0119E The previous image-("{0}") hides this image.
+IconDialog.Group.Browse                               = Browse in
+IconDialog.Label.Location                             = Location:
+IconDialog.Label.Files                                = Files:
+IconDialog.Radio.BrowseProject                        = Project
+IconDialog.Radio.BrowseFiles                          = File system
+IconDialog.Text.Filter                                = Filter:
+IconDialog.Checkbox.SearchSubDirs                     = Search sub-directories
+IconDialog.Group.AvailableIcons                       = Available images
+IconDialog.Group.SelectedImage                        = Selected image
+IconDialog.Text.FileSelected                          = File:
+IconDialog.Text.PathOfFile                            = Path:
+IconDialog.Msg                                        = Specify a new filter. You can also specify multiple filters separated by commas.
+IconDialog.Shell.Text                                 = Select an Image File
+ConstraintComponent.constraint                        = constraint
+SingleImageDisplay.ImageNotLoaded_WARN_               = IWAV0131W Image couldn't be loaded for some reason that couldn't be captured.
+SingleImageDisplay.OutOfMemory_WARN_                  = IWAV0132W Ran out of memory. Couldn't display the image.
+TabOrder.label                                        = Tab Order
+ShowTabOrder.label                                    = Show Tab Order
+DefaultTabOrder.label                                 = Set Default Tab Order
+Container.moved._WARN_                                = IWAV0133W A component of this container was either assigned to more than one container or it has been removed.
+JTable_ShouldnotSet_EXC_                              = IWAV0134E Shouldn't set true while there are explicit table columns.
+IconProxyAdapter.CannotReadFileError_EXC_             = IWAV0141E Cannot read file \"{0}"
+JTabbedPaneChildTreeLabelDecorator.Tab.Title          = {0}-\"{1}"
+JTabbedPaneNextObjectAction.Text                      = &Next
+JTabbedPanePreviousObjectAction.Text                  = &Previous
+JavaBeanSetTextDialog.Shell.Text                      = Set
+JavaBeanSetTextDialog.LookAndFeel.Label.Text          = &{0}:
+DummyWizardCommand.MessageDialog.FileWillBeSaved      = "{0}\'\' will be saved during this action. Proceed?
+ComponentProxyAdapter.Picture_too_large_WARN_         = IWAV0195W Component is too large for a picture. The picture has been clipped.
+ComponentProxyAdapter.Out_of_memory_WARN_             = IWAV0196W Component is too large. Ran out of memory retrieving the picture.
+ComponentProxyAdapter.Image_collection_exception_EXC_ = IWAV0197E Exception occurred of type {0}
+ComponentProxyAdapter.Image_collection_failed_ERROR_  = IWAV0198E Get of the picture failed: "{0}"
+GridLayoutLayoutPage.gridDimensionsTitle              = Grid Dimensions
+GridLayoutLayoutPage.columns                          = Number of columns:
+GridLayoutLayoutPage.rows                             = Number of rows:
+GridLayoutLayoutPage.spacingTitle                     = Grid Spacing
+GridLayoutLayoutPage.horizontalGap                    = Horizontal gap:
+GridLayoutLayoutPage.verticalGap                      = Vertical gap:
 
 # GridBagConstraints Action Properties
 # Note to translators.  Do not translate any of the entries that have 
 # .gif at the end.  These are file names and not user visible strings
 #
-AnchorAction.north.label                         = Anchor north
-AnchorAction.north.tooltip                       = Anchor north
-AnchorAction.north.image                         = cmpN_pal.gif
-AnchorAction.south.label                         = Anchor south
-AnchorAction.south.tooltip                       = Anchor south
-AnchorAction.south.image                         = cmpS_pal.gif
-AnchorAction.east.label                          = Anchor east
-AnchorAction.east.tooltip                        = Anchor east
-AnchorAction.east.image                          = cmpE_pal.gif
-AnchorAction.west.label                          = Anchor west
-AnchorAction.west.tooltip                        = Anchor west
-AnchorAction.west.image                          = cmpW_pal.gif
-AnchorAction.center.label                        = Anchor center
-AnchorAction.center.tooltip                      = Anchor center
-AnchorAction.center.image                        = cmpC_pal.gif
-AnchorAction.northwest.label                     = Anchor northwest
-AnchorAction.northwest.tooltip                   = Anchor northwest
-AnchorAction.northwest.image                     = cmpNW_pal.gif
-AnchorAction.southwest.label                     = Anchor southwest
-AnchorAction.southwest.tooltip                   = Anchor southwest
-AnchorAction.southwest.image                     = cmpSW_pal.gif
-AnchorAction.northeast.label                     = Anchor northeast
-AnchorAction.northeast.tooltip                   = Anchor northeast
-AnchorAction.northeast.image                     = cmpNE_pal.gif
-AnchorAction.southeast.label                     = Anchor southeast
-AnchorAction.southeast.tooltip                   = Anchor southeast
-AnchorAction.southeast.image                     = cmpSE_pal.gif
-FillAction.horizontal.label                      = horizontal
-FillAction.horizontal.tooltip                    = Fill horizontal
-FillAction.horizontal.image                      = horFill_pal.gif
-FillAction.vertical.label                        = vertical
-FillAction.vertical.tooltip                      = Fill vertical
-FillAction.vertical.image                        = verFill_pal.gif
-GridBagComponentPage.Anchor                      = Anchor
-GridBagComponentPage.Fill                        = Fill
-GridBagComponentPage.Gridbag                     = Gridbag
-GridBagComponentPage.ToolTipText                 = Set GridBagConstraints anchor, fill, and insets values
-GridBagComponentPage.Insets                      = Insets
-GridBagComponentPage.InsetsGroup.Top             = Top:
-GridBagComponentPage.InsetsGroup.Left            = Left:
-GridBagComponentPage.InsetsGroup.Bottom          = Bottom:
-GridBagComponentPage.InsetsGroup.Right           = Right:
+AnchorAction.north.label                              = Anchor north
+AnchorAction.north.tooltip                            = Anchor north
+AnchorAction.north.image                              = cmpN_pal.gif
+AnchorAction.south.label                              = Anchor south
+AnchorAction.south.tooltip                            = Anchor south
+AnchorAction.south.image                              = cmpS_pal.gif
+AnchorAction.east.label                               = Anchor east
+AnchorAction.east.tooltip                             = Anchor east
+AnchorAction.east.image                               = cmpE_pal.gif
+AnchorAction.west.label                               = Anchor west
+AnchorAction.west.tooltip                             = Anchor west
+AnchorAction.west.image                               = cmpW_pal.gif
+AnchorAction.center.label                             = Anchor center
+AnchorAction.center.tooltip                           = Anchor center
+AnchorAction.center.image                             = cmpC_pal.gif
+AnchorAction.northwest.label                          = Anchor northwest
+AnchorAction.northwest.tooltip                        = Anchor northwest
+AnchorAction.northwest.image                          = cmpNW_pal.gif
+AnchorAction.southwest.label                          = Anchor southwest
+AnchorAction.southwest.tooltip                        = Anchor southwest
+AnchorAction.southwest.image                          = cmpSW_pal.gif
+AnchorAction.northeast.label                          = Anchor northeast
+AnchorAction.northeast.tooltip                        = Anchor northeast
+AnchorAction.northeast.image                          = cmpNE_pal.gif
+AnchorAction.southeast.label                          = Anchor southeast
+AnchorAction.southeast.tooltip                        = Anchor southeast
+AnchorAction.southeast.image                          = cmpSE_pal.gif
+FillAction.horizontal.label                           = horizontal
+FillAction.horizontal.tooltip                         = Fill horizontal
+FillAction.horizontal.image                           = horFill_pal.gif
+FillAction.vertical.label                             = vertical
+FillAction.vertical.tooltip                           = Fill vertical
+FillAction.vertical.image                             = verFill_pal.gif
+GridBagComponentPage.Anchor                           = Anchor
+GridBagComponentPage.Fill                             = Fill
+GridBagComponentPage.Gridbag                          = Gridbag
+GridBagComponentPage.ToolTipText                      = Set GridBagConstraints anchor, fill, and insets values
+GridBagComponentPage.Insets                           = Insets
+GridBagComponentPage.InsetsGroup.Top                  = Top:
+GridBagComponentPage.InsetsGroup.Left                 = Left:
+GridBagComponentPage.InsetsGroup.Bottom               = Bottom:
+GridBagComponentPage.InsetsGroup.Right                = Right:
