--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-06-03 14:38:53 $
+# $Revision: 1.5 $  $Date: 2004-06-04 23:57:48 $
 #
 
 
@@ -79,14 +79,14 @@ AddEventWizard.PropChange.Msg.UseExistingListenerMethod                         
 AddEventWizard.PropChange.Msg.CreateNewListenerMethod                             = Create new Listener using method
 
 AddEventWizard.Extends.Label                                                      = &extends: {0}
-AddEventWizard.addEventTitle=Add Event
+AddEventWizard.addEventTitle                                                      = Add Event
 AddEventWizard.Implements.Label                                                   = &implements: {0}
 AddEventWizard.AddEventPage.Title                                                 = Add {0} event
 JBCFGraphicalEditorPart.ShowHideEventsAction.NoEvents                             = No Events
 JBCFGraphicalEditorPart.ShowHideEventsAction.ShowEvents                           = Show Events
 JBCFGraphicalEditorPart.ShowHideEventsAction.ExpertEvents                         = Expert Events
 JavaBeanEventUtilities.AddListenerAction.Text                                     = Add {0} Listener
-JavaBeanCustomizeLayoutPage.multipleSelection=Multiple Selection
+JavaBeanCustomizeLayoutPage.multipleSelection                                     = Multiple Selection
 JavaBeanEvents.TreeEditPart.Text                                                  = Events - available
 JavaBeanEventsObjectActionDelegate.MenuItem.AddEvents.Text                        = Add Events ...
 OCMGraphicalEditorPart.StatusLabel.NoStatus.Text                                  = 
@@ -96,10 +96,10 @@ AddEventWizard.compositeProperty.button.addPropertyChange(listener)             
 AddEventWizard.compositeProperty.label.CreateNewListenerMethod                    = Create new listener using method
 AddEventWizard.compositeProperty.button.1Arg.addPropertyChange(listener)          = addPropertyChange(PropertyChangeListener listener)
 AddEventWizard.compositeProperty.button.2Arg.addPropertyChange(property,listener) = addPropertyChange(String propertyName, PropertyChangeListener event)
-PropertyEventChanged.Label														  = {1} changed
+PropertyEventChanged.Label                                                        = {1} changed
 
-ToolTipAssistFactory.ToolTip_not_available_1=Round Tripping is stopped
-BasicAllocationProcesser.ThisTypeNotFoundOrInvalid_EXC_=Type of "this" was not found, or it was invalid.
-BasicAllocationProcesser.InvalidAllocationClass_EXC_=Invalid allocation class: "{0}"
-BasicAllocationProcesser.unknown_ERROR_=unknown
-BeanProxyAdapter.NoBeanInstantiatedForSomeReason_EXC_=No Bean instantiated for some reason.
+ToolTipAssistFactory.ToolTip_not_available_1                                      = Round Tripping is stopped
+BasicAllocationProcesser.ThisTypeNotFoundOrInvalid_EXC_                           = IWAV0187E Type of "this" was not found, or it was invalid.
+BasicAllocationProcesser.InvalidAllocationClass_EXC_                              = IWAV0188E Invalid allocation class: "{0}"
+BasicAllocationProcesser.unknown_ERROR_                                           = IWAV0189E unknown
+BeanProxyAdapter.NoBeanInstantiatedForSomeReason_EXC_                             = IWAV0190E No Bean instantiated for some reason.
