--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
@@ -10,28 +10,28 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-06-03 14:39:55 $
+# $Revision: 1.4 $  $Date: 2004-06-04 23:57:48 $
 #
 
 
-BeansLauncher.Err.SettingLookAndFeel_ERROR_     = IWAV0047E Error setting look and feel to {0}
-BeansLauncher.Msg.BeanWithNullConstructor_INFO_ = IWAV0048I Java Bean {0} started with null constructor
-BeansLauncher.Msg.BeanWithMain_INFO_            = IWAV0055I Java Bean {0} started with the main method
-BeansLauncher.Msg.BeanWithShellMethod_INFO_     = IWAV0056I Java Bean {0} started with the {1} method
-BeansLauncher.Err.UnableToLoad_ERROR_           = IWAV0049E Unable to load class {0}
-BeansLauncher.Err.NoDefaultConstructor_ERROR_   = IWAV0050E No default constructor to instantiate class {0}
-BeansLauncher.Err.InstantiationException_ERROR_ = IWAV0051E Instantion Exception creating {0}
-BeansLauncher.Err.InvocationException_ERROR_    = IWAV0052E Invocation Target Exception creating {0}
-BeansLauncher.Err.IllegalAccessException_ERROR_ = IWAV0053E Illegal Access Exception creating {0}
-BeansLauncher.FrameTitle.LaunchJComponent       = JavaBean - {0}
-BeansLauncher.FrameTitle.LaunchComponent        = Test Java Bean - {0}
-BeansLauncher.FrameTitle.LaunchApplet           = Test Applet
-BeansLauncher.Msg.AppletStarted_INFO_           = IWAV0054I Applet {0} started
-BeansLauncher.Menu.Applet                       = Applet
-BeansLauncher.Menu.Applet.Shortcut              = A
-BeansLauncher.Menu.Stop                         = Stop
-BeansLauncher.Menu.Stop.Shortcut                = T
-BeansLauncher.Menu.Start                        = Start
-BeansLauncher.Menu.Start.Shortcut               = S
-JavaBeansLauncher.InvalidLauncherClass_ERROR_=Invalid launcher class {0}
-JavaBeansLauncher.ErrorCreatingLauncherClass_ERROR_=Error creating launcher class {0}: {1}
+BeansLauncher.Err.SettingLookAndFeel_ERROR_         = IWAV0047E Error setting look and feel to {0}
+BeansLauncher.Msg.BeanWithNullConstructor_INFO_     = IWAV0048I Java Bean {0} started with null constructor
+BeansLauncher.Msg.BeanWithMain_INFO_                = IWAV0055I Java Bean {0} started with the main method
+BeansLauncher.Msg.BeanWithShellMethod_INFO_         = IWAV0056I Java Bean {0} started with the {1} method
+BeansLauncher.Err.UnableToLoad_ERROR_               = IWAV0049E Unable to load class {0}
+BeansLauncher.Err.NoDefaultConstructor_ERROR_       = IWAV0050E No default constructor to instantiate class {0}
+BeansLauncher.Err.InstantiationException_ERROR_     = IWAV0051E Instantion Exception creating {0}
+BeansLauncher.Err.InvocationException_ERROR_        = IWAV0052E Invocation Target Exception creating {0}
+BeansLauncher.Err.IllegalAccessException_ERROR_     = IWAV0053E Illegal Access Exception creating {0}
+BeansLauncher.FrameTitle.LaunchJComponent           = JavaBean - {0}
+BeansLauncher.FrameTitle.LaunchComponent            = Test Java Bean - {0}
+BeansLauncher.FrameTitle.LaunchApplet               = Test Applet
+BeansLauncher.Msg.AppletStarted_INFO_               = IWAV0054I Applet {0} started
+BeansLauncher.Menu.Applet                           = Applet
+BeansLauncher.Menu.Applet.Shortcut                  = A
+BeansLauncher.Menu.Stop                             = Stop
+BeansLauncher.Menu.Stop.Shortcut                    = T
+BeansLauncher.Menu.Start                            = Start
+BeansLauncher.Menu.Start.Shortcut                   = S
+JavaBeansLauncher.InvalidLauncherClass_ERROR_       = IWAV0193E Invalid launcher class {0}
+JavaBeansLauncher.ErrorCreatingLauncherClass_ERROR_ = IWAV0194E Error creating launcher class {0}: {1}
