--- a/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/messages.properties
+++ b/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/messages.properties,v $
-# $Revision: 1.6 $  $Date: 2004-06-04 23:27:17 $
+# $Revision: 1.7 $  $Date: 2004-06-04 23:57:48 $
 #
 
 
@@ -41,17 +41,17 @@ PreferencePage.CodeGen.ParsingRequire_prefix_of___ivj___for_objects_other_than_A
 PreferencePage.CodeGen.Source_Synchronization_Delay                                                              = Source synchronization delay (msec)
 PreferencePage.CodeGen.JavaBeansToSource                                                                         = Java beans to source
 PreferencePage.CodeGen.SourceToJavaBeans                                                                         = Source to Java beans
-PreferencePage.CodeGen.Error.DelayTimeMinimum_ERROR_=Delay time cannot be less than 500
-PreferencePage.CodeGen.Error.DelayTimeMustBeInteger_ERROR_=Delay time must be a valid number of milliseconds
+PreferencePage.CodeGen.Error.DelayTimeMinimum_ERROR_                                                             = IWAV0191E Delay time cannot be less than 500
+PreferencePage.CodeGen.Error.DelayTimeMustBeInteger_ERROR_                                                       = IWAV0192E Delay time must be a valid number of milliseconds
 PreferencePage.CodeGen.Error.DelayTimeValidRange                                                                 = Factor must be an integer between 1 and 9
 LookAndFeelDialog.Shell.Text                                                                                     = Look and Feel
 LookAndFeelDialog.LookAndFeel.Name                                                                               = &Name:
 LookAndFeelDialog.LookAndFeel.Class                                                                              = &Class:
 VCEPreferencePage.Tab.Appearance.Text                                                                            = &Appearance
-VCEPreferencePage.PaletteGroup.Title=Show palette
+VCEPreferencePage.PaletteGroup.Title                                                                             = Show palette
 VCEPreferencePage.Tab.Appearance.Table.LookAndFeel.Name                                                          = Name
-VCEPreferencePage.PaletteGroup.Radio.InPaletteViewer=In palette viewer
-VCEPreferencePage.PaletteGroup.Radio.EmbeddedInEditor=Embedded in editor
+VCEPreferencePage.PaletteGroup.Radio.InPaletteViewer                                                             = In palette viewer
+VCEPreferencePage.PaletteGroup.Radio.EmbeddedInEditor                                                            = Embedded in editor
 VCEPreferencePage.Tab.Appearance.Table.LookAndFeel.Class                                                         = Class
 VCEPreferencePage.Tab.Appearance.Button.New                                                                      = &New ...
 VCEPreferencePage.Tab.Appearance.Button.Edit                                                                     = &Edit ...
