--- a/trunk/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties
+++ b/trunk/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-06-02 15:57:22 $
+# $Revision: 1.5 $  $Date: 2004-06-10 15:08:08 $
 #
 
 
@@ -26,9 +26,11 @@ JavaSourceTranslator.ProgressMonitor.ProcessRootComponent     = Analyzing :{0}
 JavaSourceTranslator.ProgressMonitor.SaveDocument             = 
 CodegenMessages.ThisPart.uriID                                = \ ({0})
 which.visual.superclass                                       = Which visual class would you like to extend?
-NewVisualClassCreationWizard.title                            = Create a new Java Class using the Visual Editor
+NewVisualClassCreationWizard.title                            = New Java Visual Class
+NewVisualClassCreationWizard.page.desc                        = Create a new Java Visual Class
+NewVisualClassCreationWizard.page.title                       = Java Visual Class
 CodeGenVisualGraphicalEditorPart.StatusChangeListener.loading = Loading...
-VisualClassExampleWizard.title 
+VisualClassExampleWizard.title                                = New Example Java Visual Class 
 
 frame                                   = Frame
 panel                                   = Panel
@@ -37,3 +39,4 @@ swing                                   = Swing
 awt                                     = AWT
 other                                   = Other
 
+NewVisualClassCreationWizard.Style.Tree.Title                 = Style
