--- a/trunk/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/trunk/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.10 $  $Date: 2004-06-03 14:45:07 $
+# $Revision: 1.11 $  $Date: 2004-06-10 15:08:10 $
 #
 
 
@@ -169,3 +169,4 @@ OrientationLabelProvider.Name.Horizontal=HORIZONTAL
 OrientationLabelProvider.Name.Vertical=VERTICAL
 OrientationCellEditor.Vertical=VERTICAL
 GridDataAlignmentCellEditor.Name.Beginning=BEGINNING
+PropertyDialogEditor.dialog.title=Java Property Editor
