--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties,v $
-# $Revision: 1.6 $  $Date: 2004-06-04 23:57:48 $
+# $Revision: 1.7 $  $Date: 2004-06-10 15:08:08 $
 #
 
 
@@ -55,6 +55,7 @@ ShowOverviewAction.image                                           = /org/eclips
 Action.Delete.label                                                = Delete
 Action.Delete.tooltip                                              = Delete
 RenameJavaBeanObjectActionDelegate.Shell.Text                      = Rename
+RenameJavaBeanObjectActionDelegate.FieldNaming.Title               = Rename Field
 RenameJavaBeanObjectActionDelegate.FieldNaming.Desc                = Java Field will be named: {0}
 RenameJavaBeanObjectActionDelegate.Message                         = Enter a new name.
 JavaVisualEditor.notJavaProject_EXC_                               = IWAV0182E "{0}\" is not a Java Project. Please move the file {1} to a Java Project
