--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.11 $  $Date: 2004-06-10 15:08:10 $
+# $Revision: 1.12 $  $Date: 2004-06-16 13:52:25 $
 #
 
 
@@ -153,7 +153,7 @@ ImageDialog.Radio.BrowseProject                   = Project
 ImageDialog.Radio.BrowseFiles                     = File system
 ImageDialog.Text.Filter                           = Filter:
 ImageDialog.Checkbox.SearchSubDirs                = Search sub-directories
-ImageDialog.Group.AvailableImages                  = Available images
+ImageDialog.Group.AvailableIcons                  = Available images
 ImageDialog.Group.SelectedImage                   = Selected image
 ImageDialog.Text.FileSelected                     = File:
 ImageDialog.Text.PathOfFile                       = Path:
