--- a/trunk/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/trunk/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.12 $  $Date: 2004-06-16 13:52:25 $
+# $Revision: 1.13 $  $Date: 2004-07-06 03:00:11 $
 #
 
 
@@ -170,3 +170,5 @@ OrientationLabelProvider.Name.Vertical=VERTICAL
 OrientationCellEditor.Vertical=VERTICAL
 GridDataAlignmentCellEditor.Name.Beginning=BEGINNING
 PropertyDialogEditor.dialog.title=Java Property Editor
+SwtPlugin.UnableToSetup=Unable to setup VE properly
+SwtPlugin.Jobs.SettingUpVE=Setting up VE
