--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/core/messages.properties,v $
-# $Revision: 1.5 $  $Date: 2004-06-10 15:08:08 $
+# $Revision: 1.6 $  $Date: 2004-07-16 21:33:20 $
 #
 
 
@@ -39,4 +39,4 @@ swing                                   = Swing
 awt                                     = AWT
 other                                   = Other
 
-NewVisualClassCreationWizard.Style.Tree.Title                 = Style
+NewVisualClassCreationWizard.Style.Tree.Title                 = Style:
