62088 - don't allow GridLayout rows and columns to be set to zero simultaneously

--- a/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties
+++ b/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 18:32:00 $
+# $Revision: 1.2 $  $Date: 2004-07-22 15:49:29 $
 #
 
 
@@ -70,3 +70,7 @@ show_set_values.hide.tooltip                        = Hide which Values are Set 
 
 set_nulls.label                                     = Set property to null
 set_nulls.tooltip                                   = Set the Active Property being Edited to Null
+
+## These is the warning for jfc gridlayout
+gridlayout_rowcolumn_not_valid_WARN                 = IWAV0064W The rows and columns cannot be both set to zero.
+
