--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/vm_jfcbeaninfo/org/eclipse/ve/internal/jfc/beaninfo/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/vm_jfcbeaninfo/org/eclipse/ve/internal/jfc/beaninfo/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/vm_jfcbeaninfo/org/eclipse/ve/internal/jfc/beaninfo/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 18:29:33 $
+# $Revision: 1.2 $  $Date: 2004-07-23 15:56:38 $
 #
 
 
@@ -60,7 +60,7 @@ LineBorder.Width.Label.Text                                                     
 LineBorder.Color.Label.text                                                                              = Border Color
 LineBorder.DisplayName(width,Color)                                                                      = Line({0},{1})
 Locale.Language                                                                                          = Langauge
-Locale.Country                                                                                           = Country
+Locale.Country                                                                                           = Country/Region
 Locale.Variant                                                                                           = Variant
 Locale.TitleBorder                                                                                       = Locale Property Editor
 MatteBorder.BorderColor                                                                                  = BorderColor
