--- a/trunk/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/trunk/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.7 $  $Date: 2004-06-04 23:57:49 $
+# $Revision: 1.8 $  $Date: 2004-07-27 19:26:04 $
 #
 
 
@@ -123,3 +123,7 @@ GridBagComponentPage.InsetsGroup.Top                  = Top:
 GridBagComponentPage.InsetsGroup.Left                 = Left:
 GridBagComponentPage.InsetsGroup.Bottom               = Bottom:
 GridBagComponentPage.InsetsGroup.Right                = Right:
+
+# This is the warning for jfc gridlayout
+GridLayout_rowcolumn_not_valid_WARN             	  = IWAV0199W The rows and columns cannot be both set to zero.
+
